ui/tui/src/render/snapshots/hub_tui__render__tests__task_creation_modal_seeded_from_issue_row.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│      ╭ Title ─────────────────────────────────────────────────────────╮      │
│      │Button misaligned on mobile                                     │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Description ───────────────────────────────────────────────────╮      │
│      │Issue #7 · org/hub                                              │      │
│      │author: bob                                                     │      │
│      │                                                                │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Kind  [Space] cycle ───────────────────────────────────────────╮      │
│      │Implement                                                       │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Repo  [↑↓] type to filter ─────────────────────────────────────╮      │
│      │(none)                                                          │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Link ──────────────────────────────────────────────────────────╮      │
│      │https://github.com/org/hub/issues/7                             │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭────────────────────────────────────────────────────────────────╮      │
│      │                             SUBMIT                             │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
╰──────────────────────────────────────────────────────────────────────────────╯
  · [↩] details · [n/N] new task · [p] prs · [O] issues · [e] errors · [/] sear
