ui/tui/src/render/snapshots/hub_tui__render__tests__task_creation_modal_seeded_from_loki_row.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│                                                                              │
│      ╭ Title ─────────────────────────────────────────────────────────╮      │
│      │myapp:prod — High error rate                                    │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Description ───────────────────────────────────────────────────╮      │
│      │Loki alert · myapp (prod)                                       │      │
│      │alert: High error rate                                          │      │
│      │message: connection refused                                     │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Kind  [Space] cycle ───────────────────────────────────────────╮      │
│      │Debug                                                           │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Link ──────────────────────────────────────────────────────────╮      │
│      │https://grafana.example.com/d/abc                               │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭────────────────────────────────────────────────────────────────╮      │
│      │                             SUBMIT                             │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
  · [↩] details · [n/N] new task · [p] prs · [O] issues · [e] errors · [/] sear
