ui/tui/src/render/snapshots/hub_tui__render__tests__task_creation_modal_seeded_from_pr_row.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│      ╭ Title ─────────────────────────────────────────────────────────╮      │
│      │Add dark mode                                                   │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Description ───────────────────────────────────────────────────╮      │
│      │PR #42 · org/hub                                                │      │
│      │author: alice                                                   │      │
│      │branch: feat/dark-mode → main                                   │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Kind  [Space] cycle ───────────────────────────────────────────╮      │
│      │Review                                                          │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Repo  [↑↓] type to filter ─────────────────────────────────────╮      │
│      │(none)                                                          │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Link ──────────────────────────────────────────────────────────╮      │
│      │https://github.com/org/hub/pull/42                              │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭────────────────────────────────────────────────────────────────╮      │
│      │                             SUBMIT                             │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
╰──────────────────────────────────────────────────────────────────────────────╯
  · [↩] details · [n/N] new task · [p] prs · [O] issues · [e] errors · [/] sear
